Changed the labels on the table, and removed the asterisk on the personal question

--- a/templates/pre-show_web_form.html
+++ b/templates/pre-show_web_form.html
@@ -2,8 +2,6 @@
 <html lang="en">
     
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -105,7 +103,7 @@
             <!--vvvvvvvvvvvvvvvvvvvvvvvvv-->
 
             <select name="question">
-                <option value="" disabled="disabled" selected="selected">Please select a name</option>
+                <option value="" disabled="disabled" selected="selected">Please select a question</option>
                 <option value="Why do you have borders?">Why do you have borders?</option>
                 <option value="Why have you destroyed the planet?">Why have you destroyed the planet?</option>
                 <option value="Why do humans kill each other?">Why do humans kill each other?</option>
@@ -143,14 +141,14 @@
 
             <table><font face="HelveticaNeue-light" size = 3>
                 <tr>
-                    <td><b>How personal is this memory to you?<font size = 5 color = #FF0000>*</font></b></td>
+                    <td><b>How personal is this memory to you?</b></td>
                 </tr>
                 <tr></tr>
                 <tr>
                     <td></td>
-                    <td>Yes</td>
+                    <td>Agree</td>
                     <td></td>
-                    <td>No</td>
+                    <td>Disagree</td>
                     <td></td>
                     <td>I don't know</td>
                 </tr>
