--- a/Editor/Editor_OneAct/styles.css
+++ b/Editor/Editor_OneAct/styles.css
@@ -94,7 +94,7 @@ body {
   border-radius: 5px;
 }
 
-#Frank, #Fake, #Reddit {
+#Frank, #Fake, #Reddit, #Funny{
   height: 40px;
   width: 100px;
   font-size: 1.5em;
