--- a/Editor/Editor_OneAct/styles.css
+++ b/Editor/Editor_OneAct/styles.css
@@ -67,12 +67,12 @@ body {
 }
 
 #submit {
-  margin-right: 25px;
+  /* margin-right: 25px; */
   background-color: lightgreen;
 }
 
 #ask {
-  margin-right: 25px;
+  /* margin-right: 25px; */
   background-color: pink; 
 }
 
@@ -94,7 +94,7 @@ body {
   border-radius: 5px;
 }
 
-#Frank, #Fake, #Reddit, #Funny{
+#Frank, #Fake, #Reddit, #Funny, #More{
   height: 40px;
   width: 100px;
   font-size: 1.5em;
