--- a/Editor/Editor_OneAct/styles.css
+++ b/Editor/Editor_OneAct/styles.css
@@ -68,17 +68,14 @@ body {
 
 #submit {
   /* margin-right: 25px; */
-  background-color: lightgreen;
+  background-color: lightblue;
 }
 
-#ask {
+#ask, #refresh {
   /* margin-right: 25px; */
   background-color: pink; 
 }
 
-#refresh {
-  background-color: yellow;
-}
 
 #submit {
   height: 40px;
@@ -94,12 +91,29 @@ body {
   border-radius: 5px;
 }
 
-#Frank, #Fake, #Reddit, #Funny, #More{
+#Frank, #Fake, #Reddit, #Funny {
   height: 40px;
   width: 100px;
   font-size: 1.5em;
   border-radius: 5px;
   background-color: lightblue;
+}
+
+#comment {
+  height: 40px;
+  width: 100px;
+  font-size: 1.2em;
+  border-radius: 5px;
+  background-color: yellow;
+
+}
+
+#More {
+  height: 40px;
+  width: 100px;
+  font-size: 1.5em;
+  border-radius: 5px;
+  background-color: yellow;
 }
 
 #ask {
@@ -131,6 +145,14 @@ body {
   font-size: 1em;
   border-radius: 5px;
   color: white;
+}
+
+#warn {
+  height: 40px;
+  width: 125px;
+  font-size: 1em;
+  border-radius: 5px;
+  color: green;
 }
 
 #cue1, #cue2, #cue3 {
